<resources>
    <string name="app_name">PurchaseShop</string>


    <string name="title_home_main">浙采网</string>
    <string name="title_home">采购计划</string>
    <string name="title_dashboard">优品选购</string>
    <string name="title_notifications">菜单收藏</string>
    <string name="title_goods_detail">产品详情</string>
    <string name="title_confirm_receipt">确认收货</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_account_hint">账号</string>
    <string name="login_account_hint_demand">请输入账号</string>
    <string name="login_account_hint_phone_num">请输入手机号</string>
    <string name="login_account_hint_pwd">请输入密码</string>
    <string name="error_invalid_password">密码不能少于6位</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_wait_hint">%ds后可重新发送</string>
    <string name="login_account_right_phone_num">手机号格式错误</string>


    <string name="login_password_hint">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="regist_one">尚未注册？</string>
    <string name="regist">注册</string>
    <string name="regist_two"><u>请点击注册</u></string>
    <string name="login_password_hint_demand">请输入密码</string>
    <string name="login_password_new_hint">请输入新密码</string>
    <string name="login_sendverifycode">发送验证码</string>
    <string name="login_resendverifycode">重新获取验证码</string>
    <string name="get_sendverifycode">获取验证码</string>
    <string name="login_verify_code">验证码</string>
    <string name="login_input_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="user_account">账号</string>
    <string name="user_new_pwd">新密码</string>
    <string name="submit">提交</string>
    <string name="add_puchase">加入采购</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_tip">请输入你要采购的食品名称</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="get_goods">去收货</string>
    <string name="no_goods_num">缺货数量</string>
    <string name="add_goods">补货</string>
    <string name="day_purchase">日常采购</string>

    <string name="tip_collection_success">收藏成功</string>
    <string name="tip_add_goods_success">采购成功</string>
</resources>
