<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/gray_main_bg"
    tools:context="com.purchase.zhecainet.purchaseshop.ui.commom.LoginActivity">

    <include layout="@layout/title_bar_layout"></include>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/login_input_horizontal_margin"
            android:paddingRight="@dimen/login_input_horizontal_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_main_logo"
                android:scaleType="centerInside"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_account_hint_phone_num"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/text_dark"
                    android:textColorHint="@color/hint_text"
                    android:textSize="@dimen/text_size_18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_account_hint_pwd"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/text_dark"
                    android:textColorHint="@color/hint_text"
                    android:textSize="@dimen/text_size_18sp" />

            </android.support.design.widget.TextInputLayout>


            <ImageButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:background="@drawable/ic_btn_login"
               />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:text="@string/forget_password"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
