<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_main_bg"
    android:orientation="vertical"
    tools:context="com.purchase.zhecainet.purchaseshop.ui.commom.FindPwdActivity">

    <include layout="@layout/title_bar_layout"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_text_height"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/rl1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/user_account"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/text_size_16sp" />

                <EditText
                    android:id="@+id/find_phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/input_horizontal_margin"
                    android:layout_toRightOf="@id/rl1"
                    android:background="@null"
                    android:digits="1234567890."
                    android:gravity="center_vertical"
                    android:hint="@string/login_account_hint_demand"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/text_dark"
                    android:textColorHint="@color/hint_text"
                    android:textSize="@dimen/text_size_16sp" />
            </RelativeLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:background="@color/gray_devider_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_text_height"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/rl2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/user_new_pwd"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/text_size_16sp" />

                <EditText
                    android:id="@+id/find_pwd_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/input_horizontal_margin"
                    android:layout_toRightOf="@id/rl2"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/login_password_new_hint"
                    android:singleLine="true"
                    android:textColor="@color/text_dark"
                    android:textColorHint="@color/hint_text"
                    android:textSize="@dimen/text_size_16sp" />


                <CheckBox
                    android:id="@+id/check_box"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:button="@drawable/ic_eye"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:text=""
                    />
            </RelativeLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:background="@color/gray_devider_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_text_height"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/rl3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/login_verify_code"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/text_size_16sp" />

                <FrameLayout
                    android:id="@+id/login_account_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/input_horizontal_margin"
                    android:layout_toRightOf="@id/rl3"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/regist_code_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:digits="1234567890."
                        android:gravity="center_vertical"
                        android:hint="@string/login_input_code"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/text_dark"
                        android:textColorHint="@color/hint_text"
                        android:textSize="@dimen/text_size_16sp" />


                    <Button
                        android:id="@+id/regist_getcode_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="right|center_vertical"
                        android:background="@drawable/shape_trangle_corner_green_bg"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/login_resendverifycode"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                </FrameLayout>


            </RelativeLayout>

            <View
                android:id="@+id/login_divider1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_below="@+id/login_account_lo"
                android:background="@color/gray_devider_line" />


            <RelativeLayout
                android:id="@+id/subimt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="@dimen/btn_margin_bottom_high"
                android:background="@drawable/ic_subimt"
                android:layout_marginTop="60dp"
                android:onClick="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/ic_login_subimt" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/submit"
                        android:textColor="@color/milk_white"
                        android:textSize="@dimen/text_size_12sp" />


                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
