<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_main_bg"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_main_bg"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/gray_main_bg"
            app:expandedTitleMarginStart="100dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@android:color/transparent"
            app:titleEnabled="false">

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/calander_bg"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.6"
                app:mcv_selectionColor="@color/calander_select_bg"
                app:mcv_showOtherDates="all" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/tv_deparmnent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_size_18sp" />

                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_size_18sp" />
            </RelativeLayout>
        </android.support.design.widget.CollapsingToolbarLayout>

        <TextView
            android:id="@+id/tv_center_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="2017年5月22日"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_size_18sp" />

        <RadioGroup
            android:id="@+id/plan_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@drawable/ic_plan_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/plan_left_rb"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/selector_plan_left"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/day_purchase"
                android:paddingLeft="20dp"
                android:textColor="@color/selector_textcolor"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/plan_right_rb"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_plan_left"
                android:button="@null"
                android:gravity="center"
                android:text="@string/add_goods"
                android:textColor="@color/selector_textcolor"
                android:textSize="14sp" />

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_plan_catogry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_size_14sp" />

            <TextView
                android:id="@+id/tv_plan_center_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_size_14sp" />

            <TextView
                android:id="@+id/tv_plan_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_size_14sp" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <RelativeLayout
        android:id="@+id/confirm_get_goods_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/btn_margin_bottom_high"
        android:background="@drawable/ic_subimt"
        android:onClick="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_get_goods" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/get_goods"
                android:textColor="@color/milk_white"
                android:textSize="@dimen/text_size_12sp" />


        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>